SERVER-63811 Add check to allow documents stage to run without a database existing