src/mongo/s/commands/cluster_map_reduce_agg.cpp
@@ -191,6 +191,7 @@ bool runAggregationMapReduce(OperationContext* opCtx,
                                                                cm,
                                                                involvedNamespaces,
                                                                false,   // hasChangeStream
+                                                               false,   // startsWithDocuments
                                                                true,    // allowedToPassthrough
                                                                false);  // perShardCursor
     try {
@@ -234,7 +235,8 @@ bool runAggregationMapReduce(OperationContext* opCtx,
                     namespaces,
                     privileges,
                     &tempResults,
-                    false));  // hasChangeStream
+                    false,    // hasChangeStream
+                    false));  // startsWithDocuments
                 break;
             }
 
